@@ -6,6 +6,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+SH-2009-08-04-0: Enhancem.:  Enhanced usage-test for maxvmem
+                 Bugster:    6287864
+                 Issue:      1314
+                 Review:     JG
+
 JG-2009-08-04-0: Enhancem.:  New check for IZ 3094.
                  Review:     HP
 
